--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
     width: 64px;
     height: 64px;
     border-radius: 40px;
-    background: black;
     margin: 12px 4px;
     transition: background .1s;
     background: black;
@@ -189,4 +188,38 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 .md-large {
 	font-size: 220px;
 	cursor: pointer;
+}
+
+@media (max-width: 768px) {
+	#minisax .whole {
+	    width: 128px;
+	    height: 128px;
+	    border-radius: 64px;
+	    margin: 24px 8px;
+	}
+
+	#minisax .whole:first-child {
+	    width: 60px;
+	    height: 60px;
+	    border-radius: 30px;
+	    background: black;
+	    margin: 0 0 12px 0;
+	}
+
+	#minisax .half {
+		width: 64px;
+	    height: 128px;
+	    border-top-left-radius: 120px;
+	    border-bottom-left-radius: 120px;
+	    transition: background .1s;
+	    background: none;
+	}
+
+	#minisax .whole:first-child .half {
+		width: 30px;
+	    height: 60px;
+	    /*background-color: #ff4700;*/
+	    border-top-left-radius: 120px;
+	    border-bottom-left-radius: 120px
+	}
 }
