--- a/css/style.css
+++ b/css/style.css
@@ -191,24 +191,44 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 }
 
 @media (max-width: 768px) {
-	/*#minisax .whole {
-	    width: 128px;
-	    height: 128px;
-	    border-radius: 64px;
-	    margin: 24px 8px;
+
+	#btn-play, #btn-stop {
+		font-size: 160px;
+	}
+
+	#tempo-wrap {
+		margin: 32px 0 0 0;
+	}
+
+	.tempo {
+		font-size: 16px;
+		margin: 8px;
+	}
+
+	#input form {
+		margin: 0 0 16px 0;
+	}
+
+	#minisax .whole {
+	    width: 50px;
+	    height: 50px;
+	    border-radius: 25px;
+	    margin: 12px 4px;
+	    transition: background .1s;
+	    background: black;
 	}
 
 	#minisax .whole:first-child {
-	    width: 60px;
-	    height: 60px;
-	    border-radius: 30px;
+	    width: 20px;
+	    height: 20px;
+	    border-radius: 10px;
 	    background: black;
 	    margin: 0 0 12px 0;
 	}
 
 	#minisax .half {
-		width: 64px;
-	    height: 128px;
+		width: 32px;
+	    height: 64px;
 	    border-top-left-radius: 120px;
 	    border-bottom-left-radius: 120px;
 	    transition: background .1s;
@@ -216,9 +236,10 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 	}
 
 	#minisax .whole:first-child .half {
-		width: 30px;
-	    height: 60px;
+		width: 15px;
+	    height: 30px;
+	    /*background-color: #ff4700;*/
 	    border-top-left-radius: 120px;
-	    border-bottom-left-radius: 120px;
-	}*/
+	    border-bottom-left-radius: 120px
+	}
 }
