--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 	.tempo {
 		font-size: 16px;
 		margin: 8px;
+		padding: 6px;
 	}
 
 	#input form {
@@ -210,10 +211,10 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 	}
 
 	#minisax .whole {
-	    width: 50px;
-	    height: 50px;
-	    border-radius: 25px;
-	    margin: 12px 4px;
+	    width: 40px;
+	    height: 40px;
+	    border-radius: 20px;
+	    margin: 8px 4px;
 	    transition: background .1s;
 	    background: black;
 	}
@@ -227,8 +228,8 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 	}
 
 	#minisax .half {
-		width: 32px;
-	    height: 64px;
+		width: 20px;
+	    height: 40px;
 	    border-top-left-radius: 120px;
 	    border-bottom-left-radius: 120px;
 	    transition: background .1s;
@@ -236,8 +237,8 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 	}
 
 	#minisax .whole:first-child .half {
-		width: 15px;
-	    height: 30px;
+		width: 10px;
+	    height: 20px;
 	    /*background-color: #ff4700;*/
 	    border-top-left-radius: 120px;
 	    border-bottom-left-radius: 120px
