--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,11 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 		padding: 6px;
 	}
 
+	#display {
+	    font-size: 16px;
+	    padding: 4px;
+	}
+
 	#input form {
 		margin: 0 0 16px 0;
 	}
