--- a/css/style.css
+++ b/css/style.css
@@ -107,9 +107,27 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 
 #input form select {
 	margin: 16px;
-	padding: 8px;
+	padding: 16px;
 	border-radius: 4px;
 	border: 1px solid black;
+	background: white;
+	background-image: 
+		linear-gradient(45deg, transparent 50%, #000000 50%),
+		linear-gradient(135deg, #000000 50%, transparent 50%),
+		linear-gradient(to right, white, white);
+	background-position:
+		calc(100% - 20px) calc(1em + 8px),
+		calc(100% - 15px) calc(1em + 8px),
+		100%, 0;
+	background-size:
+		5px 5px,
+		5px 5px,
+		2.5em 2.5em;
+	background-repeat: no-repeat;
+	appearance: none;
+    font-size: 16px;
+    font-family: 'Merriweather', serif;
+    min-width: 180px;
 }
 
 .orange {
