--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,20 @@ body { display: flex; align-items: center; justify-content: space-evenly; flex-d
 		margin: 0 0 16px 0;
 	}
 
+	#input form select {
+		padding: 8px;
+		background-image: 
+			linear-gradient(45deg, transparent 50%, #000000 50%),
+			linear-gradient(135deg, #000000 50%, transparent 50%),
+			linear-gradient(to right, white, white);
+		background-position:
+			calc(100% - 11px) calc(1em + 1px),
+			calc(100% - 6px) calc(1em + 1px),
+			100%, 0;
+	    font-size: 14px;
+	    min-width: 140px;
+	}
+
 	#minisax {
 		margin: 24px 0 0 0;
 		padding: 12px;
