--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ body { display: flex; align-items: center; background: #fff; justify-content: sp
 	appearance: none;
     font-size: 16px;
     font-family: 'Merriweather', serif;
-    min-width: 180px;
+    min-width: 190px;
 }
 
 .orange {
@@ -269,10 +269,11 @@ body { display: flex; align-items: center; background: #fff; justify-content: sp
 	display: block;
 	text-decoration: none;
 	padding: 6px 10px 4px 10px;
+	transition: background .1s;
 }
 
-#feeback:hover {
-	background-color: #ff4700;
+a#feeback:hover {
+	background: #ff4700 !important;
 }
 
 #feedback i {
@@ -328,7 +329,7 @@ body { display: flex; align-items: center; background: #fff; justify-content: sp
 			calc(100% - 6px) calc(1em + 1px),
 			100%, 0;
 	    font-size: 14px;
-	    min-width: 140px;
+	    min-width: 150px;
 	}
 
 	#minisax {
